[gd_scene load_steps=2 format=3 uid="uid://t87n8udxfehh"]

[ext_resource type="Script" path="res://Assets/Items/Spawnable Items/spawn_lemon.gd" id="1_aepq8"]

[node name="spawn_lemon" type="Node2D"]
script = ExtResource("1_aepq8")

[node name="Timer" type="Timer" parent="."]
wait_time = 65.0
autostart = true

[node name="spawn_area" type="ReferenceRect" parent="."]
offset_right = 64.0
offset_bottom = 64.0

[node name="lemon_spawn" type="Node2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
